--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/serverjs",
+    "start": "node src/server.js",
     "start-dev": "nodemon src/server.js"
   },
   "keywords": [],
